--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>spring-boot-monitoring-actuator-telegraf-influxdb-grafana</module>
+        <module>spring-boot-monitoring-actuator-telegraf-influxdb1x-grafana</module>
     </modules>
     <packaging>pom</packaging>
 
