--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>spring-boot-monitoring-actuator-telegraf-influxdb-grafana</module>
         <module>spring-boot-monitoring-actuator-telegraf-influxdb1x-grafana</module>
+        <module>spring-boot-monitoring-actuator-prometheus-grafana</module>
     </modules>
     <packaging>pom</packaging>
 
