--- a/spring-boot-monitoring-actuator-telegraf-influxdb1x-grafana/Dockerfile
+++ b/spring-boot-monitoring-actuator-telegraf-influxdb1x-grafana/Dockerfile
@@ -1,8 +1,8 @@
 FROM openjdk:8-jre-alpine
+WORKDIR /app
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apk/repositories && \
 apk update && \
-mkdir -p /app
-COPY target/spring-boot-monitoring-actuator-telegraf-influxdb1x-grafana-1.0.0-SNAPSHOT.jar app/spring-boot-monitoring-actuator-telegraf-influxdb1x-grafana.jar
+COPY target/spring-boot-monitoring-actuator-telegraf-influxdb1x-grafana-1.0.0-SNAPSHOT.jar spring-boot-monitoring-actuator-telegraf-influxdb1x-grafana.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app/spring-boot-monitoring-actuator-telegraf-influxdb1x-grafana.jar"]
+ENTRYPOINT ["java", "-jar", "spring-boot-monitoring-actuator-telegraf-influxdb1x-grafana.jar"]
