--- a/spring-boot-monitoring-actuator-telegraf-influxdb-grafana/telegraf/telegraf.conf
+++ b/spring-boot-monitoring-actuator-telegraf-influxdb-grafana/telegraf/telegraf.conf
@@ -15,8 +15,8 @@
 [[outputs.influxdb_v2]]
   urls = ["http://influxdb:8086"]
   token = "12345678"
-  organization = "cxis"
-  bucket = "cxis-bucket"
+  organization = "pullock"
+  bucket = "pullock-bucket"
 
 [[inputs.cpu]]
   percpu = true
